<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            style="@style/Question"
            android:text="@string/Q1" />

        <RadioGroup
            android:id="@+id/radio_Group_Q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp">

            <RadioButton
                android:id="@+id/radio_Group_Q1A1"
                android:text="@string/Q1A1" />

            <RadioButton
                android:id="@+id/radio_Group_Q1A2"
                android:text="@string/Q1A2" />

            <RadioButton
                android:id="@+id/radio_Group_Q1A3"
                android:text="@string/Q1A3" />

        </RadioGroup>

        <TextView
            style="@style/Question"
            android:text="@string/Q2" />

        <RadioGroup
            android:id="@+id/radio_Group_Q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp">

            <RadioButton
                android:id="@+id/radio_Group_Q2A1"
                android:text="@string/Q2A1" />

            <RadioButton
                android:id="@+id/radio_Group_Q2A2"
                android:text="@string/Q2A2" />

            <RadioButton
                android:id="@+id/radio_Group_Q2A3"
                android:text="@string/Q2A3" />
        </RadioGroup>

        <TextView
            style="@style/Question"
            android:text="@string/Q3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radio_Group_Q3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp">

                    <RadioButton
                        android:id="@+id/radio_Group_Q3A1"
                        android:text="@string/Q3A1" />

                    <RadioButton
                        android:id="@+id/radio_Group_Q3A2"
                        android:text="@string/Q3A2" />

                    <RadioButton
                        android:id="@+id/radio_Group_Q3A3"
                        android:text="@string/Q3A3" />
                </RadioGroup>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/man" />
        </LinearLayout>

        <TextView
            style="@style/Question"
            android:text="@string/Q4" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="\?"
            android:inputType="textPersonName"
            android:paddingLeft="24dp"
            android:layout_marginLeft="32dp"
            android:textSize="16dp"/>


        <TextView
            style="@style/Question"
            android:text="@string/Q5" />

        <CheckBox
            android:id="@+id/checkbox_Q5A1"
            android:text="@string/Q5A1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="24dp"
            android:paddingLeft="8dp"
            android:textSize="16dp" />
        <CheckBox
            android:id="@+id/checkbox_Q5A2"
            android:text="@string/Q5A2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="24dp"
            android:paddingLeft="8dp"
            android:textSize="16dp" />
        <CheckBox
            android:id="@+id/checkbox_Q5A3"
            android:text="@string/Q5A3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="24dp"
            android:paddingLeft="8dp"
            android:textSize="16dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="submit"
            android:text="submit"
            android:layout_margin="16dp"
            android:background="#303F9F"
            android:textColor="#FFFFFF"/>


    </LinearLayout>
</ScrollView>
